manifests/demo_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: demo
  labels:
    name: demo
