manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: demo
  labels:
    name: demo

kind: Namespace
apiVersion: v1
metadata:
  name: flags
  labels:
    name: flags
