manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-deployment
  namespace: demo
  labels:
    app: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
           # This is the annotation for OpenFeature Operator
      annotations:     
        openfeature.dev/enabled: "true"
        openfeature.dev/flagsourceconfiguration: "flags/flagsourceconfiguration-sample"     
    spec:
      containers:
      - name: demoapp
        image: aloisreitbauer/featuredemo:V1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
    livenessProbe:
      httpGet:
        path: /healthz
        port: 3000
      initialDelaySeconds: 3
      periodSeconds: 3
