manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demo
spec:
  selector:
    app.kubernetes.io/name: demoapp-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
